--- a/styling/main.css
+++ b/styling/main.css
@@ -1,15 +1,11 @@
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px 0;
-  text-align: center;
-}
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
   background-color: rgb(255, 255, 255);
+  display: grid; 
+  grid-template-columns: 2fr 1fr; 
+  gap: 20px; 
+  padding: 20px;
 }
 header {
   display: flex;
@@ -17,8 +13,32 @@ header {
   gap: 10px;
   padding-left: 10px;
   background-color: grey;
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid black;
+  grid-column: span 2; text-align: center;
 }
 header img {
   height: 100px; 
 }
+footer { grid-column: span 2; text-align: center; }
+body { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; padding: 20px; }
+
+.donuts { 
+  border: 1px solid #ccc;
+   padding: 10px;
+    border-radius: 8px;
+   }
+.donut { 
+  display:  flex; 
+  align-items: center;
+   gap: 10px; margin-bottom: 10px;
+ }
+.donut img { 
+  width: 60px; 
+  height: 60px; object-fit: cover;
+   border-radius: 8px;
+   }
+.form-container { 
+  border: 1px solid #ccc; 
+  padding: 15px; 
+  border-radius: 8px;
+ }
