--- a/styling/main.css
+++ b/styling/main.css
@@ -1,11 +1,11 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: rgb(255, 255, 255);
   display: grid; 
   grid-template-columns: 2fr 1fr; 
   gap: 20px; 
   padding: 20px;
+  background-color: grey;
 }
 header {
   display: flex;
@@ -20,25 +20,31 @@ header img {
   height: 100px; 
 }
 footer { grid-column: span 2; text-align: center; }
-body { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; padding: 20px; }
 
 .donuts { 
   border: 1px solid #ccc;
    padding: 10px;
     border-radius: 8px;
+    background-color: white;
    }
 .donut { 
   display:  flex; 
   align-items: center;
    gap: 10px; margin-bottom: 10px;
+   background-color: white;
+
  }
 .donut img { 
   width: 60px; 
   height: 60px; object-fit: cover;
    border-radius: 8px;
+   background-color: white;
+
    }
 .form-container { 
   border: 1px solid #ccc; 
   padding: 15px; 
   border-radius: 8px;
+  background-color: white;
+
  }
